@@ -1,3 +1,12 @@
+2025-08-27T00:54:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17254253005 # 748
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 192 259 / 193 260
+* notice: next accum: outdated-unq outdated-all / unq all: 193 260 / 194 261
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-04] / [2025-08-26]
+
 2025-08-05T01:04:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16737865531 # 726
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
